[gd_scene load_steps=2 format=3 uid="uid://char_edit_dialog_uid"]

[ext_resource type="Script" path="res://Scripts/Dialogs/character_edit_dialog.gd" id="1_char_dialog"]

[node name="CharacterEditDialog" type="Window"]
title = "編輯我方角色"
initial_position = 2
size = Vector2i(650, 800)
script = ExtResource("1_char_dialog")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="FormContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "名稱:"

[node name="NameInput" type="LineEdit" parent="MarginContainer/VBoxContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
placeholder_text = "輸入角色名稱"

[node name="ImagePreview" type="TextureRect" parent="MarginContainer/VBoxContainer/FormContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ImagePathLabel" type="Label" parent="MarginContainer/VBoxContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "圖片路徑:"

[node name="ImagePathContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/FormContainer"]
layout_mode = 2

[node name="ImagePathInput" type="LineEdit" parent="MarginContainer/VBoxContainer/FormContainer/ImagePathContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "圖片路徑..."
editable = false

[node name="BrowseButton" type="Button" parent="MarginContainer/VBoxContainer/FormContainer/ImagePathContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "瀏覽..."

[node name="StatsLabel" type="Label" parent="MarginContainer/VBoxContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "屬性:"

[node name="HPLabel" type="Label" parent="MarginContainer/VBoxContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "生命值:"

[node name="HPInput" type="SpinBox" parent="MarginContainer/VBoxContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="StrengthLabel" type="Label" parent="MarginContainer/VBoxContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "力量:"

[node name="StrengthInput" type="SpinBox" parent="MarginContainer/VBoxContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="DefenseLabel" type="Label" parent="MarginContainer/VBoxContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "防禦:"

[node name="DefenseInput" type="SpinBox" parent="MarginContainer/VBoxContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="SpeedLabel" type="Label" parent="MarginContainer/VBoxContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "速度:"

[node name="SpeedInput" type="SpinBox" parent="MarginContainer/VBoxContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="FoodLabel" type="Label" parent="MarginContainer/VBoxContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "食物需求:"

[node name="FoodInput" type="SpinBox" parent="MarginContainer/VBoxContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="DescLabel" type="Label" parent="MarginContainer/VBoxContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "描述:"

[node name="DescInput" type="TextEdit" parent="MarginContainer/VBoxContainer/FormContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "儲存"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "取消"

[connection signal="pressed" from="MarginContainer/VBoxContainer/FormContainer/ImagePathContainer/BrowseButton" to="." method="_on_browse_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
